--- a/exercicios/ex007/fundo004.html
+++ b/exercicios/ex007/fundo004.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
 
     <style>
         body{
@@ -12,14 +12,15 @@
           background-color: black;
           background-image: url(imagens/wallpaper002.jpg);
           background-position:center center;
-          background-repeat: repeat-y;
+          background-repeat: no-repeat;
           background-size: cover ;
+          background-attachment: fixed;
         }
 
 
         main{
           background-color: white;
-          width: 400px;
+          max-width: 400px;
           padding: 10px;  
           margin: auto;
           border: 1px solid red;
