--- a/desafios/d012/inde.html
+++ b/desafios/d012/inde.html
@@ -81,7 +81,7 @@
         Deixe que Deus interprete.
 
     <footer>
-        <p>Site Criado por <a href="https://github.com/Koithi" target="_blank">Victor Koithi</a> para o <a href="htpps://www.cursoemvideo.com"target="_blank">Curso em Video</a></p>
+        <p>Site Criado por <a href="https://github.com/Koithi" target="_blank">Victor Koithi</a> para o <a href="https://www.cursoemvideo.com/cursos/"target="_blank">Curso em Video</a></p>
     
     </footer>        
 
