--- a/desafios/d012/inde.html
+++ b/desafios/d012/inde.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel moderno</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
  <header>
@@ -93,6 +94,7 @@
     </section>
 
     <footer>
+        
         <p>Site Criado por <a href="https://github.com/Koithi" target="_blank">Victor Koithi</a> para o <a href="https://www.cursoemvideo.com/cursos/"target="_blank">Curso em Video</a></p>
     
     </footer>        
